--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,5 +19,4 @@ jobs:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
 
-      - run: 'npm i -g firebase-tools'
-      - run: 'firebase deploy --only functions --token=$FIREBASE_TOKEN'
+      - run: './node_modules/.bin/firebase deploy --only functions --token=$FIREBASE_TOKEN'
